Thu Nov  5 16:42:21 PST 1998 Manish Singh <yosh@gimp.org>

	* Makefile.am: added MAINTAINERS to EXTRA_DIST

	* configure.in: nicer -Wall, -ansi, etc. adding for CFLAGS with gcc

	* libgimp/parasite*.h
	* libgimp/gimpintl.h
	* app/Makefile.am
	* po/Makefile.in.in
	* configure.in: portablity, locale patch (gimp-joke-981028-0)

	* configure.in
	* plug-ins/Makefile.am: added lic, mapcolor, and xbm plug-ins

	* app/app_procs.c
	* app/menus.c: cosmetic message fixes

	* libgimp/parasite.c: use %p to print pointers

	* plug-ins/dbbrowser/dbbrowser_utils.[ch]: changes for new clist
	stuff

	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/scripts/carved-logo.scm
	* plug-ins/script-fu/scripts/chrome-it.scm
	* plug-ins/script-fu/scripts/crystal-logo.scm
	* plug-ins/script-fu/scripts/neon-logo.scm
	* plug-ins/script-fu/scripts/sota-chrome-logo.scm: applied
	gimp-ruth-981103-0, adds a filesel to script-fu and SF-FILENAME
	param type. Make some scripts use this.

Thu Nov  5 21:55:46 GMT 1998 Andy Thomas <alt@picnic.demon.co.uk>

	* app/gradient.c 
	* app/gradient_select.c

	Changes due to gtk+ updates. Clist have been changed recently
	in gtk which required changes to source code. These changes 
	have only been tested with the gtk version that introduced these 
	changes. (so lets get all those updates going...)

Wed Nov  4 11:24:55 EST 1998   Adrian Likins <adrian@gimp.org>

	* MAINTAINERS: added a list of current maintainers
	  and developers and what they work on.

Wed Nov  4 22:23:18 GMT 1998 Andy Thomas <alt@picnic.demon.co.uk>

	* app/gradient.c 
	* app/Makefile.am

	New files

	* app/gradient_select.c
	* app/gradient_header.h

	Split gradient selector dialog out of the main gradient code.
	New gradient headerfile that contains the key gradient structures
	and #defines.

Tue Nov  3 21:47:53 GMT 1998 Andy Thomas <alt@picnic.demon.co.uk>

	* plug-ins/script-fu/scripts/comic-logo.scm